[gd_scene load_steps=2 format=3 uid="uid://drag_race_scene_001"]

[ext_resource type="Script" path="res://scripts/drag_race_controller.gd" id="1"]

[node name="DragRace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.25, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
text = "DRAG RACE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChristmasTree" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -200.0
offset_right = 30.0
offset_bottom = 200.0
alignment = 1

[node name="PreStageLight" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="PreStageLabel" type="Label" parent="ChristmasTree/PreStageLight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "PRE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageLight" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="StageLabel" type="Label" parent="ChristmasTree/StageLight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "STAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="ChristmasTree"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Yellow1Light" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="Yellow2Light" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="Yellow3Light" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="Spacer2" type="Control" parent="ChristmasTree"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GreenLight" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="GreenLabel" type="Label" parent="ChristmasTree/GreenLight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "GO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedLight" type="ColorRect" parent="ChristmasTree"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="RedLabel" type="Label" parent="ChristmasTree/RedLight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "FOUL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLane" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -900.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = -20.0

[node name="LaneBackground" type="ColorRect" parent="PlayerLane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.4, 0.4, 0.4, 1)

[node name="StartLine" type="ColorRect" parent="PlayerLane"]
layout_mode = 1
offset_right = 5.0
offset_bottom = 80.0
color = Color(1, 1, 1, 1)

[node name="FinishLine" type="ColorRect" parent="PlayerLane"]
layout_mode = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -5.0
offset_bottom = 80.0
color = Color(1, 1, 0, 1)

[node name="PlayerCar" type="ColorRect" parent="PlayerLane"]
layout_mode = 1
offset_left = 10.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0, 0.5, 1, 1)

[node name="OpponentLane" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -900.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = 100.0

[node name="LaneBackground" type="ColorRect" parent="OpponentLane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.4, 0.4, 0.4, 1)

[node name="StartLine" type="ColorRect" parent="OpponentLane"]
layout_mode = 1
offset_right = 5.0
offset_bottom = 80.0
color = Color(1, 1, 1, 1)

[node name="FinishLine" type="ColorRect" parent="OpponentLane"]
layout_mode = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -5.0
offset_bottom = 80.0
color = Color(1, 1, 0, 1)

[node name="OpponentCar" type="ColorRect" parent="OpponentLane"]
layout_mode = 1
offset_left = 10.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(1, 0.2, 0.2, 1)

[node name="PlayerInfo" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0

[node name="PlayerLabel" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "PLAYER"

[node name="SpeedLabel" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "Speed: 0 mph"

[node name="OpponentInfo" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 250.0
offset_right = 250.0
offset_bottom = 350.0

[node name="OpponentLabel" type="Label" parent="OpponentInfo"]
layout_mode = 2
text = "OPPONENT"

[node name="SpeedLabel" type="Label" parent="OpponentInfo"]
layout_mode = 2
text = "Speed: 0 mph"

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -40.0
text = "Press SPACE or W when light turns GREEN!"
horizontal_alignment = 1

[node name="ResultsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0

[node name="ResultsLabel" type="Label" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -50.0
text = "Results"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -45.0
offset_right = 75.0
offset_bottom = -15.0
text = "Race Again"

[connection signal="pressed" from="ResultsPanel/RestartButton" to="." method="_on_restart_button_pressed"]
